--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -42,6 +42,7 @@
 @import 'components/mobile-menu';
 @import 'components/button';
 @import 'components/scrollbar';
+@import 'components/box-border';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
