--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -64,8 +64,8 @@ h3 {
 h4 {
   padding: $filler--m $filler--xs;
   color: var(--color-secondary);
-  font-family: $font-family--text;
-  font-size: $font-size--3;
+  font-family: $font-family--link;
+  font-size: $font-family--link;
   font-variant: $font-variant--text;
   font-weight: $font-weight--text;
   letter-spacing: $letter-spacing--text;
