--- a/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
@@ -18,7 +18,7 @@
     @include flex-items(1, 1);
 
     position: relative;
-    margin: $filler--m;
+    // margin: $filler--m;
   }
 
   &__title {
