style-main: more styling v22

--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,7 +8,7 @@
 
 // #  <h1>
 h1 {
-  padding: $filler--l $filler--xs;
+  padding: $filler--m $filler--xs;
   color: var(--color-primary);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -22,7 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
-  padding: $filler--l $filler--xs;
+  padding: $filler--m $filler--xs;
   color: var(--color-primary);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
@@ -42,7 +42,7 @@ h2 {
 
 // #  <h3>
 h3 {
-  padding: $filler--m $filler--xs;
+  padding: $filler--s $filler--xs;
   color: var(--color-secondary);
   font-family: $font-family--article-title;
   font-size: $font-size--4;
@@ -62,7 +62,7 @@ h3 {
 
 // #  <h4>
 h4 {
-  padding: $filler--m $filler--xs;
+  padding: $filler--s $filler--xs;
   color: var(--color-secondary);
   font-family: $font-family--link;
   font-size: $font-family--link;
@@ -82,7 +82,7 @@ h4 {
 
 // #  <h5>
 h5 {
-  padding: $filler--s $filler--xs;
+  padding: $filler--xs $filler--xs;
   color: var(--color-tertiary);
   font-family: $font-family--text;
   font-size: $font-size--2;
@@ -102,7 +102,7 @@ h5 {
 
 // #  <h6>
 h6 {
-  padding: $filler--s $filler--xs;
+  padding: $filler--xs $filler--xs;
   color: var(--color-tertiary);
   font-family: $font-family--text;
   font-size: $font-size--1;
