style-main: updating v1

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1103,474 +1103,44 @@ ul.menu-left.collapse {
 /* -------------------------------------------------------------------------- *\
 *  _block.scss: This partial file contains all 'block' styles.
 \* -------------------------------------------------------------------------- */
-/* Inline-Block */
-.inline-block__padded--xxs {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  padding: 0.25rem;
-}
-
-.inline-block__padded--xs {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  padding: 0.5rem;
-}
-
-.inline-block__padded--s {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  padding: 1rem;
-}
-
-.inline-block__padded--m {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  padding: 1.5rem;
-}
-
-/* Regular-Block */
-.block__padded--xxs {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: 0.25rem;
-}
-
-.block__padded--xs {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: 0.5rem;
-}
-
-.block__padded--s {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: 1rem;
-}
-
-.block__padded--m {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: 1.5rem;
-}
-
 /* -------------------------------------------------------------------------- *\
 *  _flex.scss: This partial file contains all 'flex' styles.
 \* -------------------------------------------------------------------------- */
-/* Inline-Flex */
-.inline-flex__padded--xxs {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 0.25rem;
-}
-
-.inline-flex__padded--xxs-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0.25rem;
-}
-
-.inline-flex__padded--xxs-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 0.25rem;
-}
-
-.inline-flex__padded--xxs-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0.25rem;
-}
-
-.inline-flex__padded--xs {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 0.5rem;
-}
-
-.inline-flex__padded--xs-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0.5rem;
-}
-
-.inline-flex__padded--xs-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 0.5rem;
-}
-
-.inline-flex__padded--xs-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0.5rem;
-}
-
-.inline-flex__padded--s {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 1rem;
-}
-
-.inline-flex__padded--s-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1rem;
-}
-
-.inline-flex__padded--s-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 1rem;
-}
-
-.inline-flex__padded--s-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 1rem;
-}
-
-.inline-flex__padded--m {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 1.5rem;
-}
-
-.inline-flex__padded--m-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1.5rem;
-}
-
-.inline-flex__padded--m-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 1.5rem;
-}
-
-.inline-flex__padded--m-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 1.5rem;
-}
-
-/* Regular-Flex */
-.flex__padded--xxs {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0.25rem;
-}
-
-.flex__padded--xxs-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0.25rem;
-}
-
-.flex__padded--xxs-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 0.25rem;
-}
-
-.flex__padded--xxs-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0.25rem;
-}
-
-.flex__padded--xs {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0.5rem;
-}
-
-.flex__padded--xs-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0.5rem;
-}
-
-.flex__padded--xs-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 0.5rem;
-}
-
-.flex__padded--xs-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0.5rem;
-}
-
-.flex__padded--s {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 1rem;
-}
-
-.flex__padded--s-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1rem;
-}
-
-.flex__padded--s-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 1rem;
-}
-
-.flex__padded--s-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 1rem;
-}
-
-.flex__padded--m {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 1.5rem;
-}
-
-.flex__padded--m-column {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1.5rem;
-}
-
-.flex__padded--m-row {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 1.5rem;
-}
-
-.flex__padded--m-wrap {
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 1.5rem;
-}
-
 /* -------------------------------------------------------------------------- *\
 *  _grid.scss: This partial file contains all 'grid' styles.
 \* -------------------------------------------------------------------------- */
-/* Inline-Grid */
-/* Regular-Grid */
+/* -------------------------------------------------------------------------- *\
+*  _container-new.scss: This partial file contains all 'container-new' styles.
+\* -------------------------------------------------------------------------- */
+/* HERE I AM */
+.outer__small-block {
+  display: block;
+  width: 100%;
+  height: auto;
+  padding: 0.25rem;
+}
+
+.wrapper__flat-block--row-wrap {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.inner__medium-flex--row-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: auto;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0.5rem;
+}
+
 /* -------------------------------------------------------------------------- *\
 *  _card.scss: This partial file contains all 'card' styles.
 \* -------------------------------------------------------------------------- */
