--- a/assets/styles/scss/components/_button-backup.scss
+++ b/assets/styles/scss/components/_button-backup.scss
@@ -16,19 +16,19 @@ button {
 
   position: relative;
   top: 0;
-  padding: $filler--xxs;
+  padding: $buffer--xxs;
   border-top: 1px solid lightness(var(--color-secondary), 1.22);
   border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
-  margin-left: $filler--xs;
-  background:
-    linear-gradient(to bottom,
+  margin-left: $buffer--xs;
+  background: linear-gradient(
+    to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%);
+    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
+  );
   border-radius: $border-radius--xs;
   color: lightness(var(--color-secondary), 0.9);
-  text-shadow:
-    0 -2px 0 lightness(var(--color-secondary), 0.8),
+  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
 
@@ -42,11 +42,12 @@ button {
 }
 
 .btn:hover {
-  background:
-    linear-gradient(to bottom,
+  background: linear-gradient(
+    to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%);
+    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%
+  );
 }
 
 .btn:active {
@@ -67,10 +68,11 @@ button {
   left: 0;
   display: inline-flex;
   height: $button--height;
-  background:
-    linear-gradient(to top,
+  background: linear-gradient(
+    to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
+  );
   border-radius: $border-radius--xs;
   box-shadow: $box-shadow--button---before;
   content: '';
@@ -84,5 +86,5 @@ button {
 .btn--icon {
   @include dimensions(btn, $font-size--3);
   // width: $font-size--5;
-  // padding: $filler--xxs;
+  // padding: $buffer--xxs;
 }
