--- a/assets/styles/scss/components/_containers.scss
+++ b/assets/styles/scss/components/_containers.scss
@@ -8,17 +8,9 @@
 
 // -  <<----------<< Block >>---------->>
 
-/* Inline-Block */
-@include container-base(inline-block, xxs, $filler--xxs);
-@include container-base(inline-block, xs, $filler--xs);
-@include container-base(inline-block, s, $filler--s);
-@include container-base(inline-block, m, $filler--m);
+//* Inline-Block */
 
-/* Regular-Block */
-@include container-base(block, xxs, $filler--xxs);
-@include container-base(block, xs, $filler--xs);
-@include container-base(block, s, $filler--s);
-@include container-base(block, m, $filler--m);
+//* Regular-Block */
 
 /* -------------------------------------------------------------------------- *\
 *  _flex.scss: This partial file contains all 'flex' styles.
@@ -26,17 +18,9 @@
 
 // -  <<----------<< Flex >>---------->>
 
-/* Inline-Flex */
-@include container-base(inline-flex, xxs, $filler--xxs);
-@include container-base(inline-flex, xs, $filler--xs);
-@include container-base(inline-flex, s, $filler--s);
-@include container-base(inline-flex, m, $filler--m);
+//* Inline-Flex */
 
-/* Regular-Flex */
-@include container-base(flex, xxs, $filler--xxs);
-@include container-base(flex, xs, $filler--xs);
-@include container-base(flex, s, $filler--s);
-@include container-base(flex, m, $filler--m);
+//* Regular-Flex */
 
 /* -------------------------------------------------------------------------- *\
 *  _grid.scss: This partial file contains all 'grid' styles.
@@ -44,8 +28,6 @@
 
 // -  <<----------<< Grid >>---------->>
 
-/* Inline-Grid */
-// @include container-base(inline-grid);
+//* Inline-Grid */
 
-/* Regular-Grid */
-// @include container-base(grid);
+//* Regular-Grid */
