--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -36,6 +36,7 @@
 +  PARTIAL SCSS GROUP 5 - `components/`
 \* ========================================================================== */
 @import 'components/containers';
+@import 'components/container-new';
 @import 'components/card';
 @import 'components/icon';
 @import 'components/switch';
