--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -11,7 +11,7 @@
     [data-wf] {
       position: relative;
       z-index: 1;
-      outline: calc(#{$filler--xxs} / 2) solid var(--wireframe--wire);
+      outline: calc(#{$buffer--xxs} / 2) solid var(--wireframe--wire);
     }
 
     [data-wf]::before {
@@ -24,23 +24,25 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background:
-        linear-gradient(to top right,
-        transparent calc(50% - 1px),
-        var(--wireframe--wire) calc(50% - 1px),
-        var(--wireframe--wire) calc(50% + 1px),
-        transparent calc(50% + 1px)),
-        linear-gradient(to bottom right,
-        transparent calc(50% - 1px),
-        var(--wireframe--wire) calc(50% - 1px),
-        var(--wireframe--wire) calc(50% + 1px),
-        transparent calc(50% + 1px)),
+      background: linear-gradient(
+          to top right,
+          transparent calc(50% - 1px),
+          var(--wireframe--wire) calc(50% - 1px),
+          var(--wireframe--wire) calc(50% + 1px),
+          transparent calc(50% + 1px)
+        ),
+        linear-gradient(
+          to bottom right,
+          transparent calc(50% - 1px),
+          var(--wireframe--wire) calc(50% - 1px),
+          var(--wireframe--wire) calc(50% + 1px),
+          transparent calc(50% + 1px)
+        ),
         var(--wireframe--bg-color);
       color: var(--wireframe--wire);
       content: attr(data-wf);
       font: bold 2em Jubilat, Georgia, serif;
-      text-shadow:
-        0 0 0.25em var(--wireframe--bg-color),
+      text-shadow: 0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
