--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -7,14 +7,14 @@
 .card {
   @include box-shadow(2);
   @include box-transition;
-  // padding: $filler--xs;
+  // padding: $buffer--xs;
 
   overflow: hidden;
-  min-width: calc(#{$dimension--xxs} - #{$filler--l});
+  min-width: calc(#{$dimension--xxs} - #{$buffer--l});
   max-width: calc((#{$dimension--xxs} / 3) + #{$dimension--xxs});
   height: 80vh;
   flex: 1 1 auto;
-  // margin: $filler--m;
+  // margin: $buffer--m;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
