--- a/assets/styles/scss/components/_scrollbar.scss
+++ b/assets/styles/scss/components/_scrollbar.scss
@@ -10,8 +10,8 @@
 
 .simplebar-scrollbar::before {
   position: absolute;
-  right: calc(#{$filler--xxs} / 2);
-  left: calc(#{$filler--xxs} / 2);
+  right: calc(#{$buffer--xxs} / 2);
+  left: calc(#{$buffer--xxs} / 2);
   background: var(--color-tertiary);
   border-radius: $border-radius--xs;
   content: '';
