--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -40,7 +40,7 @@ header {
 
 header nav {
   // ...
-  // min-width: calc(#{$dimension--xxs} - #{$filler--xl});
+  // min-width: calc(#{$dimension--xxs} - #{$buffer--xl});
   max-width: $dimension--xl;
   @include dimensions;
 }
